nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    k8s-app: nginx  
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: eilerb101/kong-test:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 5000
          protocol: TCP
      restartPolicy: Always
